# GC2026

./: .gitignore  AdjustConfig.py  CLAUDE.md  README.md  app.py  applications.py  cleanup.py  config.yaml  environments.sh  img_trans.py  main.py  pyproject.toml  setup.py
ImgTrans/: IImgTrans.py  ImgTrans.py  __init__.py
app/: __init__.py  main.py
app/core/: config_bridge.py  device_pinger.py  device_store.py  frame_source.py  frame_source_manager.py  ssh_worker.py  udp_receiver.py
app/repositories/: __init__.py
app/ui/: main_window.py  theme.py
app/ui/screens/: color_ring_tuner_screen.py  color_tuner_screen.py  config_screen.py  detector_tuner_screen.py  log_screen.py  receiver_screen.py  service_screen.py
app/ui/widgets/: param_slider.py  parameter_group_panel.py
core/: config_bridge.py
detector/: ColorDetect.py  ColorRingDetect.py  Detect.py  __init__.py  schema.py
docs/: APP_DEV_SPEC.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  IMG_TRANS.md  PRD-App.md  app.pen
run_auto/: board_led_setup.service  change_board_led.sh  cleanup.sh  clear-run-main-logs.service  gpio-setup.service  run-auto-shell-permission.service  run-main-auto.service  run_before_use_GPIO.sh  run_main.sh  ttys3-permission.service
utils/: ConfigLoader.py  UART.py  __init__.py  _cap.py  env_check.py  file_hash.py  gpio.py  hardware_noop.py  tspi_board_info.py  typingCheck.py  wifi_connect.py
