[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "gc2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "jieba>=0.42.1",
    "loguru>=0.7.0",
    "luma-core>=2.5.3",
    "luma-oled>=3.15.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "pyyaml>=6.0.3",
]

[[index]]
url = "https://repo.huaweicloud.com/repository/pypi/simple"
default = true

[project.optional-dependencies]
app = [
    "paramiko>=5.0.0",
    "pyqt6>=6.11.0",
    "qasync>=0.28.0",
]

board = [
    "python-periphery>=2.4.0",
]

[project.scripts]
main = "main:cli"
setup = "setup:cli"
img_trans = "img_trans:cli"
app = "app:cli"
